# garland

./: .gitignore  AGENTS.md  CLAUDE.md  NEXT_WAVE.md  README.md  TODO.md  gradle.properties  opencode_autoloop.sh
.cargo/: config.toml
app/: build.gradle.kts
app/src/androidTest/java/com/andotherstuff/garland/: AppLaunchTest.kt  (+5 more)
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: bg_garland_window.xml  bg_input_surface.xml  bg_panel_inset.xml  bg_status_chip.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/layout/: activity_compose.xml  activity_config.xml  activity_diagnostics.xml  activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
automation/: cargo_capped.sh  gradle_capped.sh  opencode_scoped_loop.sh  release_alpha.sh  report_android_unit_coverage.py  run_parallel_loops.sh  verify_alpha_no_device.sh
automation/loop-workloads/: background-execution.md  diagnostics-release.md  provider-flow.md
core/: Cargo.toml
core/src/: blossom_upload.rs  commit_chain.rs  commit_crypto.rs  crypto.rs  erasure.rs  erasure_read.rs  erasure_write.rs  identity.rs  inode.rs  jni_api.rs  key_hierarchy.rs  lib.rs  mvp_write.rs  nostr_event.rs  packaging.rs
core/src/commit_chain/: crypto.rs  directory_readback.rs  head_resolution.rs  mod.rs  snapshot_building.rs
docs/: ALPHA_RELEASE_CHECKLIST.md  CURRENT_STATUS.md  RELEASE_NOTES_v0.0.2-alpha.md  RELEASE_NOTES_v0.0.3-alpha.md  RELEASE_NOTES_v0.0.4-alpha.md  RELEASE_TODO.md
(+71 files in other folders)
